--- a/platform/wasm/index.html
+++ b/platform/wasm/index.html
@@ -1,241 +1,66 @@
-<!doctype html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" href="style.css" />
     <script src="osc.min.js" type="text/javascript"></script>
-    <script type='text/javascript'>
-      // here are some utility functions for OSC
-      // and one example synth-def ("analog bubbles" with two
-      // controls named "freq1" and "freq2").
-      var sendOSC = function(name, ...args) {
-        var data  = osc.writePacket({ address: name, args: args });
-        var ep    = Module.oscDriver[57110];
-        var rcv   = ep ? ep['receive'] : undefined;
-        if (typeof rcv == 'function') rcv(57120, data);
-      };
-      var sendOSC_t = function(name, tags, ...args) {
-        for (i = 0; i < args.length; i++) {
-          args[i] = { type: tags[i], value: args[i] };
-        }
-        var data  = osc.writePacket({ address: name, args: args }, { metadata: true });
-        var ep    = Module.oscDriver[57110];
-        var rcv   = ep ? ep['receive'] : undefined;
-        if (typeof rcv == 'function') rcv(57120, data);
-      };
-      // the binary SynthDef blob
-      var bubblesDef = Uint8Array.from(
-        [83, 67, 103, 102, 0, 0, 0, 1, 0, 1, 13, 65, 110, 97, 108, 111, 103, 66, 117, 98, 98, 108, 101, 115, 0, 7, 0, 0, 0, 0, 64, 64, 0, 0, 66, -96, 0, 0, 65, -64, 0, 0, 61, 35, -41, 10, 62, 76, -52, -51, 64, -128, 0, 0, 0, 3, 62, -52, -52, -51, 65, 0, 0, 0, 63, 103, 92, 41, 0, 3, 5, 102, 114, 101, 113, 49, 0, 0, 5, 102, 114, 101, 113, 50, 0, 1, 6, 100, 101, 116, 117, 110, 101, 0, 2, 0, 18, 7, 67, 111, 110, 116, 114, 111, 108, 1, 0, 0, 0, 3, 0, 0, 1, 1, 1, 5, 76, 70, 83, 97, 119, 2, 0, 2, 0, 1, 0, 0, 0, 0, 0, 0, -1, -1, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 1, 0, 2, 0, 1, 0, 2, 0, 0, 0, 1, 0, 0, 0, 2, 1, 5, 76, 70, 83, 97, 119, 2, 0, 2, 0, 1, 0, 0, 0, 2, 0, 0, -1, -1, 0, 0, 2, 6, 77, 117, 108, 65, 100, 100, 2, 0, 3, 0, 1, 0, 0, 0, 3, 0, 0, -1, -1, 0, 1, -1, -1, 0, 2, 2, 6, 77, 117, 108, 65, 100, 100, 2, 0, 3, 0, 1, 0, 0, 0, 1, 0, 0, -1, -1, 0, 3, 0, 4, 0, 0, 2, 11, 85, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 1, 0, 1, 0, 17, 0, 5, 0, 0, 2, 6, 83, 105, 110, 79, 115, 99, 2, 0, 2, 0, 1, 0, 0, 0, 6, 0, 0, -1, -1, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 2, 0, 1, 0, 2, 0, 7, 0, 0, -1, -1, 0, 4, 2, 5, 67, 111, 109, 98, 78, 2, 0, 4, 0, 1, 0, 0, 0, 8, 0, 0, -1, -1, 0, 5, -1, -1, 0, 5, -1, -1, 0, 6, 2, 5, 76, 70, 83, 97, 119, 2, 0, 2, 0, 1, 0, 0, 0, 0, 0, 1, -1, -1, 0, 0, 2, 6, 77, 117, 108, 65, 100, 100, 2, 0, 3, 0, 1, 0, 0, 0, 10, 0, 0, -1, -1, 0, 1, -1, -1, 0, 2, 2, 6, 77, 117, 108, 65, 100, 100, 2, 0, 3, 0, 1, 0, 0, 0, 1, 0, 0, -1, -1, 0, 3, 0, 11, 0, 0, 2, 11, 85, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 1, 0, 1, 0, 17, 0, 12, 0, 0, 2, 6, 83, 105, 110, 79, 115, 99, 2, 0, 2, 0, 1, 0, 0, 0, 13, 0, 0, -1, -1, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 2, 0, 1, 0, 2, 0, 14, 0, 0, -1, -1, 0, 4, 2, 5, 67, 111, 109, 98, 78, 2, 0, 4, 0, 1, 0, 0, 0, 15, 0, 0, -1, -1, 0, 5, -1, -1, 0, 5, -1, -1, 0, 6, 2, 3, 79, 117, 116, 2, 0, 3, 0, 0, 0, 0, -1, -1, 0, 0, 0, 16, 0, 0, 0, 9, 0, 0, 0, 0]
-      );
-      var pitchDef = Uint8Array.from(
-        [83, 67, 103, 102, 0, 0, 0, 2, 0, 1, 11, 80, 105, 116, 99, 104, 70, 111, 108, 108, 111, 119, 0, 0, 0, 27, 64, 0, 0, 0, 61, 76, -52, -51, 67, -36, 0, 0, 66, 112, 0, 0, 69, 122, 0, 0, 66, -56, 0, 0, 65, -128, 0, 0, 64, -32, 0, 0, 60, -93, -41, 10, 63, 0, 0, 0, 63, -128, 0, 0, 0, 0, 0, 0, 62, -103, -103, -102, 61, -52, -52, -51, 61, 35, -41, 10, 60, -2, -82, -90, 60, 114, 51, -15, 60, 66, -34, -41, 59, -20, 37, -51, 61, 21, -20, 90, 60, -15, 102, -113, 60, 30, 87, -51, 60, -43, -92, 59, 60, -67, 73, 95, 61, 26, -33, -99, 60, 44, -93, 36, 59, -122, -1, -72, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 3, 111, 117, 116, 0, 0, 0, 0, 0, 0, 0, 29, 7, 67, 111, 110, 116, 114, 111, 108, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 2, 73, 110, 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, -1, -1, -1, -1, 0, 0, 0, 0, 2, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 2, 9, 65, 109, 112, 108, 105, 116, 117, 100, 101, 1, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 1, -1, -1, -1, -1, 0, 0, 0, 1, 1, 5, 80, 105, 116, 99, 104, 1, 0, 0, 0, 11, 0, 0, 0, 2, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 2, -1, -1, -1, -1, 0, 0, 0, 3, -1, -1, -1, -1, 0, 0, 0, 4, -1, -1, -1, -1, 0, 0, 0, 5, -1, -1, -1, -1, 0, 0, 0, 6, -1, -1, -1, -1, 0, 0, 0, 7, -1, -1, -1, -1, 0, 0, 0, 8, -1, -1, -1, -1, 0, 0, 0, 9, -1, -1, -1, -1, 0, 0, 0, 10, -1, -1, -1, -1, 0, 0, 0, 11, 1, 1, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2, 0, 0, 0, 4, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 9, 1, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2, 0, 0, 0, 4, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 0, 1, 8, 76, 70, 78, 111, 105, 115, 101, 49, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1, -1, -1, -1, 0, 0, 0, 12, 1, 6, 77, 117, 108, 65, 100, 100, 1, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0, 0, 7, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 13, -1, -1, -1, -1, 0, 0, 0, 13, 1, 6, 86, 97, 114, 83, 97, 119, 2, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 11, 0, 0, 0, 8, 0, 0, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2, 0, 0, 0, 9, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 2, 6, 86, 97, 114, 83, 97, 119, 2, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0, 0, 4, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 11, 0, 0, 0, 8, 0, 0, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2, 0, 0, 0, 11, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 2, 6, 86, 97, 114, 83, 97, 119, 2, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0, 0, 6, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 11, 0, 0, 0, 8, 0, 0, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2, 0, 0, 0, 13, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 2, 4, 83, 117, 109, 51, 2, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0, 0, 14, 0, 0, 0, 0, 0, 0, 0, 12, 0, 0, 0, 0, 0, 0, 0, 10, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 15, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 15, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 16, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 17, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 17, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 19, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 18, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 21, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 19, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 23, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 20, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 25, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 15, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 16, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 22, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 18, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 23, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 20, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 24, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 22, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 25, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 24, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 26, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 26, -1, -1, -1, -1, 0, 0, 0, 0, 2, 3, 79, 117, 116, 2, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 21, 0, 0, 0, 0, 0, 0, 0, 27, 0, 0, 0, 0, 0, 0]
-      );
-      var dumpOSC = function(code) {
-        code = code ? code : 1;
-        sendOSC_t("/dumpOSC", "i", code);
-      };
-      var cmdPeriod = function() {
-        sendOSC_t("/g_freeAll", "i", 0);
-      }
-      // send the "AnalogBubbles" synth-def to the server
-      var d_bubbles = function() {
-        sendOSC_t("/d_recv", "b", bubblesDef);
-      };
-      // start a synth with the "AnalogBubbles" synth-def
-      var s_bubbles = function() {
-        cmdPeriod();
-        sendOSC_t("/s_new", "siii", "AnalogBubbles", 1000, 1, 0);
-      };
-      // send the "PitchFollow" synth-def to the server
-      var d_pitch = function() {
-        sendOSC_t("/d_recv", "b", pitchDef);
-      };
-      // start a synth with the "PitchFollow" synth-def
-      var s_pitch = function() {
-        cmdPeriod();
-        sendOSC_t("/s_new", "siii", "PitchFollow", 1000, 1, 0);
-      };
-      var boot = function() {
-        var bootEl    = document.getElementById('boot');
-        var numInEl   = document.getElementById('num-inputs');
-        var numOutEl  = document.getElementById('num-outputs');
-        var args      = Module['arguments'];
-        if (numInEl) {
-          args[args.indexOf('-i') + 1] = numInEl.value;
-        }
-        if (numOutEl) {
-          args[args.indexOf('-o') + 1] = numOutEl.value;
-        }
-        Module.callMain(args);
-        if (bootEl  ) bootEl  .disabled = true;
-        if (numInEl ) numInEl .disabled = true;
-        if (numOutEl) numOutEl.disabled = true;
-      }
-    </script>
-    <title>scsynth</title>
-    <style>
-      body {
-        font-family: arial;
-        margin: 0;
-        padding: none;
-      }
+</head>
 
-      .emscripten { padding-right: 0; margin-left: auto; margin-right: auto; display: block; }
-      div.emscripten { text-align: center; }      
-      div.emscripten_border { border: 1px solid black; }
+<body>
+    <div class="wrapper">
+        <div style="display: flex; flex-direction: row; justify-content: space-between; margin-top: 50px;">
+            <div>
+                <h1>scsynth</h1>
+            </div>
 
-      #boot {
-        font-size: 20px;
-        margin-left: 20px; 
-        margin-bottom: 10px; 
-      }
+            <div class="controls" style="display: flex;">
+                <button onclick="bootScsynth(0, 2);" id="boot">Boot</button>
+                <button onclick="playGcd();">Play gcd</button>
+                <button onclick="oscClient?.cmdPeriod();">CmdPeriod</button>
+            </div>
+        </div>
+        
+        <div class="input" style="display: flex; flex-direction: row; margin-top: 50px;">
+            <div style="width: 20%;">
+                <h2>Input</h2>
+            </div>
+            <div style="width: 80%;">
+                <p>
+                    <b>OSC message</b><br/>
+                    See <a href="https://docs.supercollider.online/Reference/Server-Command-Reference.html" target="_blank">server command reference</a>.<br/>
+                    Format: address tags arguments<br/>
+                    E.g. /s_new siii gcd 1000 1 0
+                </p>
+                <div style="display: flex;">
+                    <input type="text" style="flex-grow: 1;" onkeydown="if(event.key === 'Enter') sendOsc();" id="oscMessage">
+                    <button onclick="sendOsc()">Send</button>
+                </div>
 
-      @-webkit-keyframes rotation {
-        from {-webkit-transform: rotate(0deg);}
-        to {-webkit-transform: rotate(360deg);}
-      }
-      @-moz-keyframes rotation {
-        from {-moz-transform: rotate(0deg);}
-        to {-moz-transform: rotate(360deg);}
-      }
-      @-o-keyframes rotation {
-        from {-o-transform: rotate(0deg);}
-        to {-o-transform: rotate(360deg);}
-      }
-      @keyframes rotation {
-        from {transform: rotate(0deg);}
-        to {transform: rotate(360deg);}
-      }
+                <p style="margin-top: 25px;">
+                    <b>UInt8 array</b><br/>
+                    Add SynthDef by using ".asBytes.cs" on a SynthDef in sclang.
+                </p>
+                <div style="display: flex;">
+                    <input type="text" style="flex-grow: 1;" onkeydown="if(event.key === 'Enter') sendByteArray();" id="byteArray">
+                    <button onclick="sendByteArray()">Send</button>
+                </div>
+            </div>
+        </div>
 
-      #status {
-        display: inline-block;
-        vertical-align: top;
-        margin-top: 30px;
-        margin-left: 20px;
-        font-weight: bold;
-        color: rgb(120, 120, 120);
-      }
-
-      #progress {
-        height: 20px;
-        width: 300px;
-      }
-
-      #controls {
-        float: left;
-        vertical-align: top;
-        margin-top: 30px;
-        margin-right: 20px;
-      }
-
-      #output {
-        width: 100%;
-        height: 480px;
-        margin: 0 auto;
-        margin-top: 10px;
-        border-left: 0px;
-        border-right: 0px;
-        padding-left: 0px;
-        padding-right: 0px;
-        display: block;
-        background-color: black;
-        color: white;
-        font-family: 'Lucida Console', Monaco, monospace;
-        outline: none;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="emscripten" id="status">Downloading...</div>
-
-    <span id='controls'>
-      <input type="button" id="boot" disabled="disabled" value="Boot" onclick="boot();">
-      Inputs:
-      <input type="number" id="num-inputs"  value="0" min="0" max="2" step="1">
-      Outputs:
-      <input type="number" id="num-outputs" value="2" min="0" max="2" step="1">
-    </span>
-
-    <div class="emscripten">
-      <progress value="0" max="100" id="progress" hidden=1></progress>
+        <div id="output" style="display: flex; flex-direction: row; margin-top: 50px;">
+            <div style="width: 20%;">
+                <h2>Console</h2>
+            </div>
+            <div style="width: 80%;">
+                <textarea id="console" rows="16" readonly></textarea>
+            </div>
+        </div>
     </div>
 
-    
-    <textarea id="output" rows="8"></textarea>
-
-    <script type='text/javascript'>
-      var statusElement   = document.getElementById('status');
-      var progressElement = document.getElementById('progress');
-      var bootElement     = document.getElementById('boot');
-
-      var Module = {
-        preRun: [],
-        postRun: [],
-        print: (function() {
-          var element = document.getElementById('output');
-          if (element) element.value = ''; // clear browser cache
-          return function(text) {
-            if (arguments.length > 1) text = Array.prototype.slice.call(arguments).join(' ');
-            // These replacements are necessary if you render to raw HTML
-            //text = text.replace(/&/g, "&amp;");
-            //text = text.replace(/</g, "&lt;");
-            //text = text.replace(/>/g, "&gt;");
-            //text = text.replace('\n', '<br>', 'g');
-            console.log(text);
-            if (element) {
-              element.value += text + "\n";
-              element.scrollTop = element.scrollHeight; // focus on bottom
-            }
-          };
-        })(),
-        printErr: function(text) {
-          if (arguments.length > 1) text = Array.prototype.slice.call(arguments).join(' ');
-          console.error(text);
-        },
-        setStatus: function(text) {
-          if (!Module.setStatus.last) Module.setStatus.last = { time: Date.now(), text: '' };
-          if (text === Module.setStatus.last.text) return;
-          var m = text.match(/([^(]+)\((\d+(\.\d+)?)\/(\d+)\)/);
-          var now = Date.now();
-          if (m && now - Module.setStatus.last.time < 30) return; // if this is a progress update, skip it if too soon
-          Module.setStatus.last.time = now;
-          Module.setStatus.last.text = text;
-          if (m) {
-            text = m[1];
-            progressElement.value = parseInt(m[2])*100;
-            progressElement.max = parseInt(m[4])*100;
-            progressElement.hidden = false;
-          } else {
-            progressElement.value = null;
-            progressElement.max = null;
-            progressElement.hidden = true;
-          }
-          statusElement.innerHTML = text;
-        },
-        totalDependencies: 0,
-        monitorRunDependencies: function(left) {
-          this.totalDependencies = Math.max(this.totalDependencies, left);
-          Module.setStatus(left ? 'Preparing... (' + (this.totalDependencies-left) + '/' + this.totalDependencies + ')' : 'All downloads complete.');
-        },
-        onRuntimeInitialized: function() {
-          bootElement.disabled = false;
-          Module.print("For sound examples, after booting open the console (ctrl-shift-J in Chrome)."); 
-          Module.print("Try d_bubbles() followed by s_bubbles()."); 
-          Module.print("When using microphone (Inputs = 2), try d_pitch() followed by s_pitch().");
-          Module.print("cmdPeriod() to free");
-        }
-      };
-      Module.setStatus('Downloading...');
-      window.onerror = function(event) {
-        // TODO: do not warn on ok events like simulating an infinite loop or exitStatus
-        Module.setStatus('Exception thrown, see JavaScript console');
-        Module.setStatus = function(text) {
-          if (text) Module.printErr('[post-exception status] ' + text);
-        };
-      };
-    </script>
+    <script src="scsynth_demo.js" type="text/javascript"></script>
     <script async type="text/javascript" src="scsynth.js"></script>
-  </body>
+</body>
+
 </html>
-
-
